# Stitching_Images

./: README.md
BH/: stitching.py
KH/: CMakeLists.txt
KH/include/: Config.hpp.in
KH/src/: main.cpp
